--- a/src/index.html
+++ b/src/index.html
@@ -138,11 +138,11 @@
   <section class="descont1">
     <div class="container">
       <div class="botao">
-        <h3>Acesso anual por apenas 12x R$ 15,35</h3>
-        <a href="#" target="_blank">
-          QUERO APROVEITAR MEU CUPOM DE 20% DE DESCONTO
+        <h3>Acesso anual por apenas <span>12x R$ 19,19</span></h3>
+        <a href="https://pay.hotmart.com/V9187282O?off=033xxw0y&checkoutMode=10&split=12&bid=1670966954026" target="_blank">
+          QUERO 1 ANO DE RESULTADO EM APENAS 2 MESES SE DIVERTINDO
         </a>
-        <h3>Receba imediatamente o seu acesso após a confirmação do pagamento.</h3>
+        <h3 class="menor">Receba imediatamente o seu acesso após a confirmação do pagamento.</h3>
       </div>
       <div class="icones">
         <div class="box">
@@ -164,15 +164,10 @@
   <section class="fourthSection">
     <div class="container">
       <div class="centro">
-        <hr class="linhaAzul">
-        </hr>
         <div class="words">
-          <h3>ENTENDA O <strong> FUNCIONAMENTO </strong> DO SEU CORPO COM
-            <strong> TREINOS TRADICIONAIS </strong> X <strong> TREINOS COM FASE DE ACELERAÇÃO METABÓLICA </strong>
-          </h3>
+          <h3>ENTENDA O FUNCIONAMENTO DO SEU CORPO COM </h3>
+          <h3><strong> TREINOS TRADICIONAIS X TREINOS COM FASE DE ACELERAÇÃO METABÓLICA </strong></h3>
         </div>
-        <hr class="linhaAzul">
-        </hr>
         <div class="words2">
           <p>ANALISE O GRAFICO E COMPARE COMO ESSE CICLO O QUE</p>
           <p>ACONTECE COM UM PESSOA QUE PRATICA E NÃO PRATICA RITBOX.</p>
@@ -184,7 +179,7 @@
     </div>
   </section>
 
-  <!-- <section class="fifthSection">
+  <section class="fifthSection">
     <div class="container">
       <div class="centro">
         <div class="words">
@@ -212,11 +207,11 @@
   <section class="descont1">
     <div class="container">
       <div class="botao">
-        <h3>Acesso anual por apenas 12x R$ 15,35</h3>
-        <a href="#" target="_blank">
-          QUERO APROVEITAR MEU CUPOM DE 20% DE DESCONTO
+        <h3>Acesso anual por apenas <span>12x R$ 19,19</span></h3>
+        <a href="https://pay.hotmart.com/V9187282O?off=033xxw0y&checkoutMode=10&split=12&bid=1670966954026" target="_blank">
+          QUERO 1 ANO DE RESULTADO EM APENAS 2 MESES SE DIVERTINDO
         </a>
-        <h3>Receba imediatamente o seu acesso após a confirmação do pagamento.</h3>
+        <h3 class="menor">Receba imediatamente o seu acesso após a confirmação do pagamento.</h3>
       </div>
       <div class="icones">
         <div class="box">
@@ -328,16 +323,16 @@
         </div>
       </div>
     </div>
-  </section> -->
+  </section>
 
-  <!-- <section class="descont1">
+  <section class="descont1">
     <div class="container">
       <div class="botao">
-        <h3>Acesso anual por apenas 12x R$ 15,35</h3>
-        <a href="#" target="_blank">
-          QUERO APROVEITAR MEU CUPOM DE 20% DE DESCONTO
+        <h3>Acesso anual por apenas <span>12x R$ 19,19</span></h3>
+        <a href="https://pay.hotmart.com/V9187282O?off=033xxw0y&checkoutMode=10&split=12&bid=1670966954026" target="_blank">
+          QUERO 1 ANO DE RESULTADO EM APENAS 2 MESES SE DIVERTINDO
         </a>
-        <h3>Receba imediatamente o seu acesso após a confirmação do pagamento.</h3>
+        <h3 class="menor">Receba imediatamente o seu acesso após a confirmação do pagamento.</h3>
       </div>
       <div class="icones">
         <div class="box">
@@ -387,11 +382,11 @@
   <section class="descont1">
     <div class="container">
       <div class="botao">
-        <h3>Acesso anual por apenas 12x R$ 15,35</h3>
-        <a href="#" target="_blank">
-          QUERO APROVEITAR MEU CUPOM DE 20% DE DESCONTO
+        <h3>Acesso anual por apenas <span>12x R$ 19,19</span></h3>
+        <a href="https://pay.hotmart.com/V9187282O?off=033xxw0y&checkoutMode=10&split=12&bid=1670966954026" target="_blank">
+          QUERO 1 ANO DE RESULTADO EM APENAS 2 MESES SE DIVERTINDO
         </a>
-        <h3>Receba imediatamente o seu acesso após a confirmação do pagamento.</h3>
+        <h3 class="menor">Receba imediatamente o seu acesso após a confirmação do pagamento.</h3>
       </div>
       <div class="icones">
         <div class="box">
@@ -563,9 +558,9 @@
         <use xlink:href="dist/assets/svg/sprite.svg#patter1"></use>
       </svg>
     </div>
-  </section> -->
+  </section>
 
-  <section class="seventSection">
+  <!-- <section class="seventSection">
     <div class="container">
       <h1>Basta seguir as aulas para <br> <strong>alcançar resultados como estes</strong></h1>
       <div class="flow">
@@ -597,7 +592,7 @@
         RITBOX EM CASA.</p>
 
     </div>
-  </section>
+  </section> -->
   <script>
     const imgsy = document.getElementById("imgy")
     const imgy = document.querySelectorAll("#imgy img")
