--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 
   <link rel="stylesheet" href="/dist/assets/styles/home.css">
   <link href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  <script src= "/dist/assets/scripts/home.js"></script>
   <title>Black Friday</title>
 </head>
 
@@ -72,12 +73,42 @@
       <button class="arrow-right" aria-label="next" >NEXT</button> -->
       <div class="flow">
         <div class="carrosel" id="img">
-          <img src="/dist/assets/images/2.png" alt="">
-          <img src="/dist/assets/images/7.png" alt="">
-          <img src="/dist/assets/images/11.png" alt="">
-          <img src="/dist/assets/images/18.png" alt="">
-          <img src="/dist/assets/images/21.png" alt="">
-          <img src="/dist/assets/images/7.png" alt="">
+          <!--Radio Buttons-->
+            <input type="radio" name="radio-btn" id="radio1">
+            <input type="radio" name="radio-btn" id="radio2">
+            <input type="radio" name="radio-btn" id="radio3">
+            <input type="radio" name="radio-btn" id="radio4">
+            <input type="radio" name="radio-btn" id="radio5">
+            <!--Radio Buttons-->
+            <div class="slide first-slide">
+            <img src="/dist/assets/images/2.png" alt="">
+            </div>
+            <div class="slide">
+            <img src="/dist/assets/images/7.png" alt="">
+            </div>
+            <div class="slide">
+              <img src="/dist/assets/images/11.png" alt="">
+            </div>
+            <div class="slide">
+              <img src="/dist/assets/images/18.png" alt="">
+            </div>
+            <div class="slide">
+              <img src="/dist/assets/images/21.png" alt="">
+            </div>
+            <div class="navigation-auto">
+              <div class="auto-btn1"></div>
+              <div class="auto-btn2"></div>
+              <div class="auto-btn3"></div>
+              <div class="auto-btn4"></div>
+              <div class="auto-btn5"></div>
+            </div>
+        </div>
+        <div class="manual-navigation">
+          <label for="radio1" class="manual-btn"></label>
+          <label for="radio2" class="manual-btn"></label>
+          <label for="radio3" class="manual-btn"></label>
+          <label for="radio4" class="manual-btn"></label>
+          <label for="radio5" class="manual-btn"></label>
         </div>
       </div>
       <p>Os depoimentos acima são de experiências pessoas de cada usuário e não é garantido que você poderá obter os
@@ -86,7 +117,7 @@
 
     </div>
   </section>
-  <script>
+  <!-- <script>
     const imgs = document.getElementById("img")
     const img = document.querySelectorAll("#img img")
 
@@ -102,7 +133,7 @@
 
     }
     setInterval(carrosel, 2800);
-  </script>
+  </script> -->
 
   <section class="third">
     <svg>
@@ -603,13 +634,8 @@
 
     function carrosel1() {
       idy++;
-<<<<<<< HEAD
       if (idy > imgy.length - 12){
         idy =0;
-=======
-      if (idy > imgy.length - 5) {
-        idy = 0;
->>>>>>> 1fb35fb443ed159d4623e16b572c5bb582916434
       }
       imgsy.style.transform = `translateX(${-idy * 730}px)`;
 
