--- a/src/index.html
+++ b/src/index.html
@@ -387,7 +387,7 @@ document.getElementById("radio"+count).checked = true;
       <svg>
         <use xlink:href="dist/assets/svg/sprite.svg#patter1"></use>
       </svg>
-      <span>EVANI PEREIRA</span>
+      <span class="nameEvani">EVANI PEREIRA</span>
     </div>
     <div class="container">
       <img src="/dist/assets/images/54.png" alt="" class="evani-logo">
