--- a/src/index.html
+++ b/src/index.html
@@ -122,20 +122,45 @@
   </section>
   <script>
     let count = 1;
-document.getElementById("radio1").checked = true;
+    // let counts = 1;
+    document.getElementById("radio1").checked = true;
+    // document.getElementById("radios1").checked = true;
 
-setInterval(function (){
-    nextImage();
-}, 2000)
+    setInterval(function () {
+      nextImage();
+      // nextImages();
 
-function nextImage(){
-    count++;
-    if(count>5){
+    }, 2000)
+
+    function nextImage() {
+      count++;
+      if (count > 5) {
         count = 1;
+      }
+      document.getElementById("radio" + count).checked = true;
     }
-document.getElementById("radio"+count).checked = true;
+    // function nextImages() {
+    //   counts++;
+    //   if (counts > 5) {
+    //     counts = 1;
+    //   }
+    //     document.getElementById("radios" + counts).checked = true;
+    // }
+    // let counts = 1
+    // document.getElementById("radios1").checked = true;
 
-}
+    // setInterval(function () {
+    //   nextImages();
+    // }, 2000)
+
+    // function nextImages() {
+    //   counts++;
+    //   if (counts > 5) {
+    //     counts = 1;
+    //   }
+    //   document.getElementById("radios" + counts).checked = true;
+
+    // }
   </script>
 
   <section class="third">
@@ -170,7 +195,8 @@ document.getElementById("radio"+count).checked = true;
     <div class="container">
       <div class="botao">
         <h3>Acesso anual por apenas <span>12x R$ 19,19</span></h3>
-        <a href="https://pay.hotmart.com/V9187282O?off=033xxw0y&checkoutMode=10&split=12&bid=1670966954026" target="_blank">
+        <a href="https://pay.hotmart.com/V9187282O?off=033xxw0y&checkoutMode=10&split=12&bid=1670966954026"
+          target="_blank">
           QUERO 1 ANO DE RESULTADO EM APENAS 2 MESES SE DIVERTINDO
         </a>
         <h3 class="menor">Receba imediatamente o seu acesso após a confirmação do pagamento.</h3>
@@ -239,7 +265,8 @@ document.getElementById("radio"+count).checked = true;
     <div class="container">
       <div class="botao">
         <h3>Acesso anual por apenas <span>12x R$ 19,19</span></h3>
-        <a href="https://pay.hotmart.com/V9187282O?off=033xxw0y&checkoutMode=10&split=12&bid=1670966954026" target="_blank">
+        <a href="https://pay.hotmart.com/V9187282O?off=033xxw0y&checkoutMode=10&split=12&bid=1670966954026"
+          target="_blank">
           QUERO 1 ANO DE RESULTADO EM APENAS 2 MESES SE DIVERTINDO
         </a>
         <h3 class="menor">Receba imediatamente o seu acesso após a confirmação do pagamento.</h3>
@@ -360,7 +387,8 @@ document.getElementById("radio"+count).checked = true;
     <div class="container">
       <div class="botao">
         <h3>Acesso anual por apenas <span>12x R$ 19,19</span></h3>
-        <a href="https://pay.hotmart.com/V9187282O?off=033xxw0y&checkoutMode=10&split=12&bid=1670966954026" target="_blank">
+        <a href="https://pay.hotmart.com/V9187282O?off=033xxw0y&checkoutMode=10&split=12&bid=1670966954026"
+          target="_blank">
           QUERO 1 ANO DE RESULTADO EM APENAS 2 MESES SE DIVERTINDO
         </a>
         <h3 class="menor">Receba imediatamente o seu acesso após a confirmação do pagamento.</h3>
@@ -606,7 +634,7 @@ document.getElementById("radio"+count).checked = true;
           <input type="radio" name="radio-btn" id="radios4">
           <input type="radio" name="radio-btn" id="radios5">
           <!--Radio Buttons-->
-          <div class="slide first-slide">
+          <div class="slide first-slides">
             <img src="/dist/assets/images/2.png" alt="">
           </div>
           <div class="slide">
@@ -630,11 +658,11 @@ document.getElementById("radio"+count).checked = true;
           </div>
         </div>
         <div class="manual-navigation">
-          <label for="radios1" class="manual-btn"></label>
-          <label for="radios2" class="manual-btn"></label>
-          <label for="radios3" class="manual-btn"></label>
-          <label for="radios4" class="manual-btn"></label>
-          <label for="radios5" class="manual-btn"></label>
+          <label for="radios1" class="manual-btns"></label>
+          <label for="radios2" class="manual-btns"></label>
+          <label for="radios3" class="manual-btns"></label>
+          <label for="radios4" class="manual-btns"></label>
+          <label for="radios5" class="manual-btns"></label>
         </div>
       </div>
       <p>Os depoimentos acima são de experiências pessoas de cada usuário e não é garantido que você poderá obter os
@@ -642,23 +670,7 @@ document.getElementById("radio"+count).checked = true;
         segurança utilizando o RITBOX EM CASA.</p>
     </div>
   </section>
-  <!-- <script>
-    let counts = 1
-document.getElementById("radios1").checked = true;
 
-setInterval(function (){
-    nextImages();
-}, 2000)
-
-function nextImages(){
-    counts++;
-    if(counts>5){
-        counts = 1;
-    }
-document.getElementById("radios"+counts).checked = true;
-
-}
-  </script> -->
   <section class="descont1">
     <div class="container">
       <div class="botao">
