--- a/src/index.html
+++ b/src/index.html
@@ -130,7 +130,7 @@
       nextImage();
       // nextImages();
 
-    }, 2000)
+    }, 4000)
 
     function nextImage() {
       count++;
@@ -620,20 +620,16 @@
     </div>
   </section>
 
-  <section class="seventSection">
+  <!-- <section class="seventSection">
     <div class="container">
       <h1>Basta seguir as aulas para <br> <strong>alcançar resultados como estes</strong></h1>
-      <!-- <button class="arrow-left" aria-label="previus" >PREVIOUS</button>
-      <button class="arrow-right" aria-label="next" >NEXT</button> -->
       <div class="flow">
         <div class="carrosel" id="img">
-          <!--Radio Buttons-->
           <input type="radio" name="radio-btn" id="radios1">
           <input type="radio" name="radio-btn" id="radios2">
           <input type="radio" name="radio-btn" id="radios3">
           <input type="radio" name="radio-btn" id="radios4">
           <input type="radio" name="radio-btn" id="radios5">
-          <!--Radio Buttons-->
           <div class="slide first-slides">
             <img src="/dist/assets/images/2.png" alt="">
           </div>
@@ -669,13 +665,13 @@
         mesmos resultados. Como qualquer outro programa de exercícios, você assume certos riscos para a saúde e
         segurança utilizando o RITBOX EM CASA.</p>
     </div>
-  </section>
+  </section> -->
 
   <section class="descont1">
     <div class="container">
       <div class="botao">
         <h3>Acesso anual por apenas 12x R$ 15,35</h3>
-        <a href="#" target="_blank">
+        <a href="https://pay.hotmart.com/V9187282O?off=033xxw0y&checkoutMode=10&split=12&bid=1670966954026" target="_blank">
           QUERO APROVEITAR MEU CUPOM DE 20% DE DESCONTO
         </a>
         <h3>Receba imediatamente o seu acesso após a confirmação do pagamento.</h3>
